--- a/gallery-single.html
+++ b/gallery-single.html
@@ -111,22 +111,22 @@
             <div class="swiper-wrapper align-items-center">
 
               <div class="swiper-slide">
-                <img src="assets/img/bgcol/gallery-8.jpg" alt="">
+                <img src="assets/img/bgrow/1.png" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="assets/img/bgcol/9.png.jpg" alt="">
+                <img src="assets/img/bgrow/2.png" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="assets/img/bgcol/gallery-10.jpg" alt="">
+                <img src="assets/img/bgrow/3.png" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="assets/img/bgcol/gallery-11.jpg" alt="">
+                <img src="assets/img/bgrow/4.png" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="assets/img/bgcol/gallery-12.jpg" alt="">
+                <img src="assets/img/bgrow/5.png" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="assets/img/bgcol/gallery-13.jpg" alt="">
+                <img src="assets/img/bgrow/6.png" alt="">
               </div>
 
             </div>
