--- a/contact.html
+++ b/contact.html
@@ -50,37 +50,35 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li class="dropdown"><a href="#"><span>Project Gallery</span> <i
-                class="bi bi-chevron-down dropdown-indicator"></i></a>
+          <li class="dropdown"><a href="#">
+              <span>Project Gallery</span> <i class="bi bi-chevron-down dropdown-indicator"></i>
+            </a>
             <ul>
-              <li><a href="gallery.html">Interior</a></li>
-              <li><a href="gallery.html">Exterior</a></li>
-              <li><a href="gallery.html">Renovation</a></li>
-              <li class="dropdown"><a href="#"><span>Sub Menu</span> <i
-                    class="bi bi-chevron-down dropdown-indicator"></i></a>
-                <ul>
-                  <li><a href="#">Sub Menu 1</a></li>
-                  <li><a href="#">Sub Menu 2</a></li>
-                  <li><a href="#">Sub Menu 3</a></li>
-                </ul>
-              </li>
+              <li><a href="residential.html">Residential</a></li>
+              <li><a href="commercial.html">Commercial</a></li>
             </ul>
-          </li>
           <li><a href="services.html">Services</a></li>
           <li><a href="contact.html" class="active">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
-
-      <div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
-      </div>
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
 
     </div>
+
+    <div class="social">
+      <ul>
+        <li><a href="https://www.facebook.com/profile.php?id=100086493287833"><i class="bi-facebook"
+              style="color: blue;"></i><span style="color: blue;">Facebook</span></a>
+        </li>
+        <li><a href="https://www.instagram.com/matrixark77"><i class="bi-instagram" style="color: #F56040;"></i><span
+              style="color: #F56040;">Instagram</span></a></li>
+        <li><a href="https://wa.link/qqu9ln"><i class="bi bi-whatsapp" style="color: green;"></i><span
+              style="color: green;">WhatsApp</span></a>
+        </li>
+      </ul>
+    </div>
+
   </header><!-- End Header -->
 
   <main id="main" data-aos="fade" data-aos-delay="1500">
@@ -91,10 +89,6 @@
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
             <h2>Contact</h2>
-            <p>Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a
-              odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum
-              dolorem.</p>
-
           </div>
         </div>
       </div>
@@ -111,7 +105,9 @@
               <i class="bi bi-geo-alt flex-shrink-0"></i>
               <div>
                 <h4>Location:</h4>
-                <a href="https://goo.gl/maps/cSj9pFwvvLLQqsp16">123 Street, Ang Mo Kio, Singapore.</a>
+                <a
+                  href="https://www.google.com/maps/place/Epl+Building/@1.2800926,103.8174431,17z/data=!3m1!5s0x31da197da45d23e7:0x8cc5c7e4b3a2edd8!4m14!1m7!3m6!1s0x31da197d54065a13:0xceac47e82adb29de!2sEpl+Building!8m2!3d1.2800872!4d103.8219331!16s%2Fg%2F12hqq_tt8!3m5!1s0x31da197d54065a13:0xceac47e82adb29de!8m2!3d1.2800872!4d103.8219331!16s%2Fg%2F12hqq_tt8">1100
+                  Lower Delta Rd, Singapore, 169206</a>
 
               </div>
             </div>
@@ -129,16 +125,6 @@
 
           <div class="col-lg-3">
             <div class="info-item d-flex">
-              <i class="bi bi-phone flex-shrink-0"></i>
-              <div>
-                <h4>Call:</h4>
-                <p><a href="tel:+6588157309">+65 88157309</a></p>
-              </div>
-            </div>
-          </div><!-- End Info Item -->
-
-          <div class="col-lg-3">
-            <div class="info-item d-flex">
               <i class="bi bi-whatsapp flex-shrink-0"></i>
               <div>
                 <h4>Call:</h4>
@@ -147,10 +133,25 @@
             </div>
           </div><!-- End Info Item -->
 
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7962.660006529196!2d103.81424721551416!3d1.2793713039275239!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da197d54065a13%3A0xceac47e82adb29de!2sEpl%20Building!5e0!3m2!1sen!2smm!4v1680275038693!5m2!1sen!2smm"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+
         </div>
 
-        <div class="row justify-content-center mt-4">
+        <!-- ======= End Page Header ======= -->
+        <div class="page-header d-flex align-items-center">
+          <div class="container position-relative">
+            <div class="row d-flex justify-content-center">
+              <div class="col-lg-6 text-center">
+                <h2>Contact Us Directly</h2>
+              </div>
+            </div>
+          </div>
+        </div><!-- End Page Header -->
 
+        <div class="row justify-content-center mt-4">
           <div class="col-lg-9">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
@@ -160,6 +161,9 @@
                 <div class="col-md-6 form-group mt-3 mt-md-0">
                   <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
                 </div>
+              </div>
+              <div class="form-group mt-3">
+                <input type="text" class="form-control" name="phone" id="phone" placeholder="Your Phone" required>
               </div>
               <div class="form-group mt-3">
                 <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
