--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   <title>MatrixArk - Interior Design and Renovation</title>
   <meta content="Matrix, Architect, Interior, Design, Renovation, Redesign, Website Design" name="keywords" />
   <meta content="Matrix, Architect, Interior, Design, Renovation, Redesign, Website Design" name="description" />
-
   <!-- Favicons -->
-  <link href="assets/img/favicon.ico" rel="icon">
+  <link href="assets/img/MatrixArk.png" rel="icon">
 
 
   <!-- Google Fonts -->
@@ -19,6 +18,10 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Cardo:ital,wght@0,400;0,700;1,400&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -34,7 +37,6 @@
 </head>
 
 <body>
-
   <!-- ======= Header ======= -->
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
@@ -42,7 +44,7 @@
       <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <img src="assets/img/MatrixArk1.png">
+        <img src="assets/img/4.png">
         <h1>MatrixArk</h1>
       </a>
 
@@ -50,186 +52,194 @@
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li class="dropdown"><a href="#"><span>Project Gallery</span> <i
-                class="bi bi-chevron-down dropdown-indicator"></i></a>
+          <li class="dropdown"><a href="#">
+              <span>Project Gallery</span> <i class="bi bi-chevron-down dropdown-indicator"></i>
+            </a>
             <ul>
-              <li><a href="gallery.html">Interior</a></li>
-              <li><a href="gallery.html">Exterior</a></li>
-              <li><a href="gallery.html">Renovation</a></li>
-              <li class="dropdown"><a href="#"><span>Sub Menu</span> <i
-                    class="bi bi-chevron-down dropdown-indicator"></i></a>
-                <ul>
-                  <li><a href="#">Sub Menu 1</a></li>
-                  <li><a href="#">Sub Menu 2</a></li>
-                  <li><a href="#">Sub Menu 3</a></li>
-                </ul>
-              </li>
+              <li><a href="residential.html">Residential</a></li>
+              <li><a href="commercial.html">Commercial</a></li>
             </ul>
-          </li>
           <li><a href="services.html">Services</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
-
-      <div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
-      </div>
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
-
     </div>
+
+
+
+    <div class="social">
+      <ul>
+        <li><a href="https://www.facebook.com/profile.php?id=100086493287833"><i class="bi-facebook"
+              style="color: blue;"></i><span style="color: blue;">Facebook</span></a>
+        </li>
+        <li><a href="https://www.instagram.com/matrixark77"><i class="bi-instagram" style="color: #F56040;"></i><span
+              style="color: #F56040;">Instagram</span></a></li>
+        <li><a href="https://wa.link/qqu9ln"><i class="bi bi-whatsapp" style="color: green;"></i><span
+              style="color: green;">WhatsApp</span></a></li>
+      </ul>
+    </div>
+
   </header><!-- End Header -->
 
-  <!-- ======= Hero Section ======= -->
-  <section id="hero" class="hero d-flex flex-column justify-content-center align-items-center" data-aos="fade"
-    data-aos-delay="1500">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-6 text-center">
-          <h2>We are <span>MATRIX ARK</span> a very Professional Home Decoration and Renovation Company from Singapore.
-          </h2>
-          <p>Blanditiis praesentium aliquam illum tempore incidunt debitis dolorem magni est deserunt sed qui libero.
-            Qui voluptas amet.</p>
-          <a href="contact.html" class="btn-get-started">Available for hire</a>
-        </div>
-      </div>
-    </div>
-  </section><!-- End Hero Section -->
 
   <main id="main" data-aos="fade" data-aos-delay="1500">
 
-    <!-- ======= Gallery Section ======= -->
-    <section id="gallery" class="gallery">
-      <div class="container-fluid">
+    <style>
+      /* Make the image fully responsive */
+      .carousel-inner img {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
 
-        <div class="row gy-4 justify-content-center">
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <img src="assets/img/bgcol/1.png" class="img-fluid" alt="">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/bgcol/1.png" title="Gallery 1" class="glightbox preview-link"><i
-                    class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div>
-          </div><!-- End Gallery Item -->
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <img src="assets/img/bgcol/2.png" class="img-fluid" alt="">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/bgcol/2.png" title="Gallery 2" class="glightbox preview-link"><i
-                    class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div>
-          </div><!-- End Gallery Item -->
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <img src="assets/img/bgcol/15.jpeg" class="img-fluid" alt="">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/bgcol/15.jpeg" title="Gallery 3" class="glightbox preview-link"><i
-                    class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div>
-          </div><!-- End Gallery Item -->
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <img src="assets/img/bgcol/4.png" class="img-fluid" alt="">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/bgcol/4.png" title="Gallery 4" class="glightbox preview-link"><i
-                    class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div>
-          </div><!-- End Gallery Item -->
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <img src="assets/img/bgcol/14.jpeg" class="img-fluid" alt="">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/bgcol/14.jpeg" title="Gallery 5" class="glightbox preview-link"><i
-                    class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div>
-          </div><!-- End Gallery Item -->
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <img src="assets/img/bgcol/6.png" class="img-fluid" alt="">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/bgcol/6.png" title="Gallery 6" class="glightbox preview-link"><i
-                    class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div>
-          </div><!-- End Gallery Item -->
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <img src="assets/img/bgcol/7.png" class="img-fluid" alt="">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/bgcol/7.png" title="Gallery 7" class="glightbox preview-link"><i
-                    class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div>
-          </div><!-- End Gallery Item -->
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <img src="assets/img/bgcol/8.png" class="img-fluid" alt="">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/row/8.png" title="Gallery 8" class="glightbox preview-link"><i
-                    class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div>
-          </div><!-- End Gallery Item -->
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <img src="assets/img/bgcol/9.png" class="img-fluid" alt="">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/bgcol/9.png" title="Gallery 9" class="glightbox preview-link"><i
-                    class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div>
-          </div><!-- End Gallery Item -->
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <img src="assets/img/bgcol/10.png" class="img-fluid" alt="">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/bgcol/10.png" title="Gallery 10" class="glightbox preview-link"><i
-                    class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div>
-          </div><!-- End Gallery Item -->
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <img src="assets/img/bgcol/11.jpeg" class="img-fluid" alt="">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/bgcol/11.jpeg" title="Gallery 11" class="glightbox preview-link"><i
-                    class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div>
-          </div><!-- End Gallery Item -->
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <img src="assets/img/bgcol/12.jpeg" class="img-fluid" alt="">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/bgcol/12.jpeg" title="Gallery 12" class="glightbox preview-link"><i
-                    class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div>
-          </div><!-- End Gallery Item -->
+    <!-- ======= About Section ======= -->
+
+    <div id="demo" class="carousel slide" data-ride="carousel">
+
+      <!-- Indicators -->
+      <ul class="carousel-indicators">
+        <li data-target="#demo" data-slide-to="0" class="active"></li>
+        <li data-target="#demo" data-slide-to="1"></li>
+        <li data-target="#demo" data-slide-to="2"></li>
+        <li data-target="#demo" data-slide-to="3"></li>
+        <li data-target="#demo" data-slide-to="4"></li>
+        <li data-target="#demo" data-slide-to="5"></li>
+      </ul>
+
+      <!-- The slideshow -->
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="assets/img/bgrow/1.png" width="1100" height="500">
         </div>
-
+        <div class="carousel-item">
+          <img src="assets/img/bgrow/2.png" width="1100" height="500">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/img/bgrow/3.png" width="1100" height="500">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/img/bgrow/4.png" width="1100" height="500">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/img/bgrow/5.png" width="1100" height="500">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/img/bgrow/6.png" width="1100" height="500">
+        </div>
       </div>
-    </section><!-- End Gallery Section -->
+
+      <!-- Left and right controls -->
+      <a class="carousel-control-prev" href="#demo" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </a>
+      <a class="carousel-control-next" href="#demo" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </a>
+    </div>
+
+
+    <!-- ======= Testimonials Section ======= -->
+    <section id="gallery" class="gallery">
+      <section id="testimonials" class="testimonials">
+        <div class="container">
+
+          <div class="section-header">
+            <h2>Journals</h2>
+            <p>The Most Popular Design From MatrixArk</p>
+          </div>
+
+          <div class="slides-3 swiper">
+            <div class="swiper-wrapper">
+
+              <div class="swiper-slide">
+                <div class="testimonial-item">
+                  <div class="profile mt-auto">
+                    <div class="gallery-item h-100">
+                      <img src="assets/img/bgcol/1.png" class="img-fluid" alt="">
+                      <div class="gallery-links d-flex align-items-center justify-content-center">
+                        <a href="assets/img/bgcol/1.png" title="Gallery 1" class="glightbox preview-link"><i
+                            class="bi bi-arrows-angle-expand"></i></a>
+                        <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                      </div>
+                    </div>
+                  </div>
+                  <h3>John Larson</h3>
+                </div>
+              </div><!-- End testimonial item -->
+
+              <div class="swiper-slide">
+                <div class="testimonial-item">
+                  <div class="profile mt-auto">
+                    <div class="gallery-item h-100">
+                      <img src="assets/img/bgcol/2.png" class="img-fluid" alt="">
+                      <div class="gallery-links d-flex align-items-center justify-content-center">
+                        <a href="assets/img/bgcol/2.png" title="Gallery 1" class="glightbox preview-link"><i
+                            class="bi bi-arrows-angle-expand"></i></a>
+                        <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                      </div>
+                    </div>
+                  </div>
+                  <h3>John Larson</h3>
+                </div>
+              </div><!-- End testimonial item -->
+
+              <div class="swiper-slide">
+                <div class="testimonial-item">
+                  <div class="profile mt-auto">
+                    <div class="gallery-item h-100">
+                      <img src="assets/img/bgcol/3.png" class="img-fluid" alt="">
+                      <div class="gallery-links d-flex align-items-center justify-content-center">
+                        <a href="assets/img/bgcol/3.png" title="Gallery 1" class="glightbox preview-link"><i
+                            class="bi bi-arrows-angle-expand"></i></a>
+                        <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                      </div>
+                    </div>
+                  </div>
+                  <h3>John Larson</h3>
+                </div>
+              </div><!-- End testimonial item -->
+
+              <div class="swiper-slide">
+                <div class="testimonial-item">
+                  <div class="profile mt-auto">
+                    <div class="gallery-item h-100">
+                      <img src="assets/img/bgcol/4.png" class="img-fluid" alt="">
+                      <div class="gallery-links d-flex align-items-center justify-content-center">
+                        <a href="assets/img/bgcol/4.png" title="Gallery 1" class="glightbox preview-link"><i
+                            class="bi bi-arrows-angle-expand"></i></a>
+                        <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                      </div>
+                    </div>
+                  </div>
+                  <h3>John Larson</h3>
+                </div>
+              </div><!-- End testimonial item -->
+
+              <div class="swiper-slide">
+                <div class="testimonial-item">
+                  <div class="profile mt-auto">
+                    <div class="gallery-item h-100">
+                      <img src="assets/img/bgcol/5.png" class="img-fluid" alt="">
+                      <div class="gallery-links d-flex align-items-center justify-content-center">
+                        <a href="assets/img/bgcol/5.png" title="Gallery 1" class="glightbox preview-link"><i
+                            class="bi bi-arrows-angle-expand"></i></a>
+                        <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                      </div>
+                    </div>
+                  </div>
+                  <h3>John Larson</h3>
+                </div>
+              </div><!-- End testimonial item -->
+
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+
+        </div>
+      </section>
+    </section><!-- End Testimonials Section -->
 
   </main><!-- End #main -->
 
