--- a/services.html
+++ b/services.html
@@ -50,36 +50,34 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li class="dropdown"><a href="#"><span>Project Gallery</span> <i
-                class="bi bi-chevron-down dropdown-indicator"></i></a>
+          <li class="dropdown"><a href="#">
+              <span>Project Gallery</span> <i class="bi bi-chevron-down dropdown-indicator"></i>
+            </a>
             <ul>
-              <li><a href="gallery.html">Interior</a></li>
-              <li><a href="gallery.html">Exterior</a></li>
-              <li><a href="gallery.html">Renovation</a></li>
-              <li class="dropdown"><a href="#"><span>Sub Menu</span> <i
-                    class="bi bi-chevron-down dropdown-indicator"></i></a>
-                <ul>
-                  <li><a href="#">Sub Menu 1</a></li>
-                  <li><a href="#">Sub Menu 2</a></li>
-                  <li><a href="#">Sub Menu 3</a></li>
-                </ul>
-              </li>
+              <li><a href="gallery.html">Residential</a></li>
+              <li><a href="gallery.html">Commercial</a></li>
             </ul>
-          </li>
           <li><a href="services.html" class="active">Services</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
 
-      <div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
-      </div>
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
+    </div>
 
+
+
+    <div class="social">
+      <ul>
+        <li><a href="https://www.facebook.com/profile.php?id=100086493287833"><i class="bi-facebook"
+              style="color: blue;"></i><span style="color: blue;">Facebook</span></a>
+        </li>
+        <li><a href="https://www.instagram.com/matrixark77"><i class="bi-instagram" style="color: #F56040;"></i><span
+              style="color: #F56040;">Instagram</span></a></li>
+        <li><a href="https://wa.link/qqu9ln"><i class="bi bi-whatsapp" style="color: green;"></i><span
+              style="color: green;">WhatsApp</span></a></li>
+      </ul>
     </div>
   </header><!-- End Header -->
 
@@ -90,12 +88,7 @@
       <div class="container position-relative">
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
-            <h2>Services</h2>
-            <p>Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a
-              odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum
-              dolorem.</p>
-
-            <a class="cta-btn" href="contact.html">Available for hire</a>
+            <h2>" Our Services "</h2>
 
           </div>
         </div>
